
2005-09-18  Volker Stroebel <volker@planetpenguin.de>
	* data/courses/* data/events/*
	updated color palettes for element images

2005-09-17  Volker Stroebel <volker@planetpenguin.de>
	* data/courses/* data/events/*
	fixed reset points in element images

2005-09-14  Volker Stroebel <volker@planetpenguin.de>
	* data/translations/*
	added swedish translations
	updated language files

2005-09-13  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	added experimental (hidden) multiplayer support

2005-09-12  Volker Stroebel <volker@planetpenguin.de>
	* src/racingmode.*
	added class RacingMode as subclass for all Modes during a race
	
	* src/*
	added splitscreen support
	several preparations for multiplayer	

2005-09-11  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	replaced several C Style strings with std::strings
	code cleanups

2005-09-10  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	updated assertion and log system
	
	* data/translations/*
	added ukrainian translation 
	added hungarian translation

2005-09-09  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	fixed compilation with gcc 2.95	

2005-09-08  Volker Stroebel <volker@planetpenguin.de>
	* src/data/config.nut.in
	fixed loading without user configuration
	
	* src/*
	improve documentation/comments in several files

2005-09-07  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/ui/*
	added mousewheel support based on patch #598 from ovresmot
	
	* src/squirrel/* src/sqstdlib/*
	updated squirrel to 2.0.4

2005-09-06  Volker Stroebel <volker@planetpenguin.de>
	merged privat development tree
	replaced ppgltk with ppogl
		- rewrites of huge parts of ppgltk
		- moved functionality from core to ppogl
	replaced TCL with squirrel
	changed data layout:
		- scripts are now written in squirrel
		- courses,events,cups can be translated
		- moved events and themes directory to data/
	changed layout of the configuration file and removed unused setting